change this to deploy stage
Update the .travis.yml so we have a deploy stage instead that only fires 
for master branch.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,15 @@ services:
 
 script:
   - make build
-
-script:
-  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker images
-  - make tag
-  - make push
+
+jobs:
+include:
+  - stage: deploy
+    if: branch = master
+    install: skip
+    script:
+    - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+    - docker images
+    - make tag
+    - make push
