--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,16 @@ sudo: required
 services:
   - docker
 
-script:
-  - make build
-  - docker images
-
 stages:
   - test
   - deploy
 
 jobs:
   include:
+    - stage: test
+      script:
+        - make build
+        - docker images
     - stage: deploy
       if: branch = master
       install: skip
