--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script:
   - docker images
 
 after_success:
+  - env
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker images
   - make tag
