some additional debugging

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ script:
   - docker images
 
 after_success:
-  - env
+  - echo "TRAVIS_PULL_REQUEST_BRANCH => ${TRAVIS_PULL_REQUEST_BRANCH}"
+  - echo "TRAVIS_BRANCH => ${TRAVIS_BRANCH}"
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker images
   - make tag
