--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,15 @@ script:
   - docker images
 
 after_success:
-  - echo "TRAVIS_PULL_REQUEST_BRANCH => ${TRAVIS_PULL_REQUEST_BRANCH}"
+  - echo "TRAVIS_PULL_REQUEST => ${TRAVIS_PULL_REQUEST}"
   - echo "TRAVIS_BRANCH => ${TRAVIS_BRANCH}"
+  - echo "TRAVIS_TAG => ${TRAVIS_TAG}"
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker images
   - make tag
-  - if [ "${TRAVIS_BRANCH}" = "master" ]; then
+  - if ([ "$TRAVIS_BRANCH" == "master" ] || [ ! -z "$TRAVIS_TAG" ]) &&
+      [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
       make push;
     else
-      echo "skipping docker push for ${TRAVIS_BRANCH}";
+      echo "skipping docker push for ${TRAVIS_PULL_REQUEST_BRANCH}";
     fi;
